v10/docs/ModelsCertificateRetrievalResponseSubjectAlternativeNameModel.md
# ModelsCertificateRetrievalResponseSubjectAlternativeNameModel

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**Id** | Pointer to **int64** |  | [optional] 
**Value** | Pointer to **string** |  | [optional] 
**Type** | Pointer to **int64** |  | [optional] 
**ValueHash** | Pointer to **string** |  | [optional] 

## Methods

### NewModelsCertificateRetrievalResponseSubjectAlternativeNameModel

`func NewModelsCertificateRetrievalResponseSubjectAlternativeNameModel() *ModelsCertificateRetrievalResponseSubjectAlternativeNameModel`

NewModelsCertificateRetrievalResponseSubjectAlternativeNameModel instantiates a new ModelsCertificateRetrievalResponseSubjectAlternativeNameModel object
This constructor will assign default values to properties that have it defined,
and makes sure properties required by API are set, but the set of arguments
will change when the set of required properties is changed

### NewModelsCertificateRetrievalResponseSubjectAlternativeNameModelWithDefaults

`func NewModelsCertificateRetrievalResponseSubjectAlternativeNameModelWithDefaults() *ModelsCertificateRetrievalResponseSubjectAlternativeNameModel`

NewModelsCertificateRetrievalResponseSubjectAlternativeNameModelWithDefaults instantiates a new ModelsCertificateRetrievalResponseSubjectAlternativeNameModel object
This constructor will only assign default values to properties that have it defined,
but it doesn't guarantee that properties required by API are set

### GetId

`func (o *ModelsCertificateRetrievalResponseSubjectAlternativeNameModel) GetId() int64`

GetId returns the Id field if non-nil, zero value otherwise.

### GetIdOk

`func (o *ModelsCertificateRetrievalResponseSubjectAlternativeNameModel) GetIdOk() (*int64, bool)`

GetIdOk returns a tuple with the Id field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetId

`func (o *ModelsCertificateRetrievalResponseSubjectAlternativeNameModel) SetId(v int64)`

SetId sets Id field to given value.

### HasId

`func (o *ModelsCertificateRetrievalResponseSubjectAlternativeNameModel) HasId() bool`

HasId returns a boolean if a field has been set.

### GetValue

`func (o *ModelsCertificateRetrievalResponseSubjectAlternativeNameModel) GetValue() string`

GetValue returns the Value field if non-nil, zero value otherwise.

### GetValueOk

`func (o *ModelsCertificateRetrievalResponseSubjectAlternativeNameModel) GetValueOk() (*string, bool)`

GetValueOk returns a tuple with the Value field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetValue

`func (o *ModelsCertificateRetrievalResponseSubjectAlternativeNameModel) SetValue(v string)`

SetValue sets Value field to given value.

### HasValue

`func (o *ModelsCertificateRetrievalResponseSubjectAlternativeNameModel) HasValue() bool`

HasValue returns a boolean if a field has been set.

### GetType

`func (o *ModelsCertificateRetrievalResponseSubjectAlternativeNameModel) GetType() int64`

GetType returns the Type field if non-nil, zero value otherwise.

### GetTypeOk

`func (o *ModelsCertificateRetrievalResponseSubjectAlternativeNameModel) GetTypeOk() (*int64, bool)`

GetTypeOk returns a tuple with the Type field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetType

`func (o *ModelsCertificateRetrievalResponseSubjectAlternativeNameModel) SetType(v int64)`

SetType sets Type field to given value.

### HasType

`func (o *ModelsCertificateRetrievalResponseSubjectAlternativeNameModel) HasType() bool`

HasType returns a boolean if a field has been set.

### GetValueHash

`func (o *ModelsCertificateRetrievalResponseSubjectAlternativeNameModel) GetValueHash() string`

GetValueHash returns the ValueHash field if non-nil, zero value otherwise.

### GetValueHashOk

`func (o *ModelsCertificateRetrievalResponseSubjectAlternativeNameModel) GetValueHashOk() (*string, bool)`

GetValueHashOk returns a tuple with the ValueHash field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetValueHash

`func (o *ModelsCertificateRetrievalResponseSubjectAlternativeNameModel) SetValueHash(v string)`

SetValueHash sets ValueHash field to given value.

### HasValueHash

`func (o *ModelsCertificateRetrievalResponseSubjectAlternativeNameModel) HasValueHash() bool`

HasValueHash returns a boolean if a field has been set.


[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)


